# windows-context-functions

./: README.md  generate_reg.py  pyproject.toml  python_funcs_context_cpp.reg  run_silent.cpp
base/: template.reg  template.vbs
scripts/python/: convert_pdf_into_images.py  generate_info.py  heif_to_jpg.py  markdown_to_html.py  markdown_to_pdf.py  remove_background.py
