[project]
name = "windows-context-functions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markdown-html-pdf>=0.2.3",
    "onnxruntime>=1.22.0",
    "pillow-heif>=1.0.0",
    "pymupdf>=1.26.1",
    "rembg[gpu]>=2.0.66",
]
